--- a/CIT280CRM/CIT280CRM/CIT280CRM.csproj
+++ b/CIT280CRM/CIT280CRM/CIT280CRM.csproj
@@ -209,6 +209,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ProductModels.cs" />
     <Compile Include="Models\SaleItemModels.cs" />
+    <Compile Include="Models\WimsattContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
