--- a/CIT280CRM/CIT280CRM/CIT280CRM.csproj
+++ b/CIT280CRM/CIT280CRM/CIT280CRM.csproj
@@ -197,6 +197,11 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703131339006_Initial.cs" />
+    <Compile Include="Migrations\201703131339006_Initial.Designer.cs">
+      <DependentUpon>201703131339006_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ClientModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -205,7 +210,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ProductModels.cs" />
     <Compile Include="Models\SaleItemModels.cs" />
-    <Compile Include="Models\WimsattContext.cs" />
+    <Compile Include="Models\CRMDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -296,6 +301,11 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201703131339006_Initial.resx">
+      <DependentUpon>201703131339006_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
