--- a/CIT280CRM/CIT280CRM/CIT280CRM.csproj
+++ b/CIT280CRM/CIT280CRM/CIT280CRM.csproj
@@ -302,6 +302,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Models\ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
