--- a/CIT280CRM/CIT280CRM/CIT280CRM.csproj
+++ b/CIT280CRM/CIT280CRM/CIT280CRM.csproj
@@ -202,6 +202,10 @@
     <Compile Include="Migrations\201703201218534_Initial.Designer.cs">
       <DependentUpon>201703201218534_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703201222381_Initial1.cs" />
+    <Compile Include="Migrations\201703201222381_Initial1.Designer.cs">
+      <DependentUpon>201703201222381_Initial1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ClientModels.cs" />
@@ -310,6 +314,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201703201218534_Initial.resx">
       <DependentUpon>201703201218534_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703201222381_Initial1.resx">
+      <DependentUpon>201703201222381_Initial1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
