--- a/CIT280CRM/CIT280CRM/CIT280CRM.csproj
+++ b/CIT280CRM/CIT280CRM/CIT280CRM.csproj
@@ -192,9 +192,11 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ClientModelsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InvoiceController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\SaleItemModelsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -299,6 +301,16 @@
     <Content Include="Views\Invoice\Details.cshtml" />
     <Content Include="Views\Invoice\Edit.cshtml" />
     <Content Include="Views\Invoice\Index.cshtml" />
+    <Content Include="Views\ClientModels\Create.cshtml" />
+    <Content Include="Views\ClientModels\Delete.cshtml" />
+    <Content Include="Views\ClientModels\Details.cshtml" />
+    <Content Include="Views\ClientModels\Edit.cshtml" />
+    <Content Include="Views\ClientModels\Index.cshtml" />
+    <Content Include="Views\SaleItemModels\Create.cshtml" />
+    <Content Include="Views\SaleItemModels\Delete.cshtml" />
+    <Content Include="Views\SaleItemModels\Details.cshtml" />
+    <Content Include="Views\SaleItemModels\Edit.cshtml" />
+    <Content Include="Views\SaleItemModels\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
