--- a/CIT280CRM/CIT280CRM/CIT280CRM.csproj
+++ b/CIT280CRM/CIT280CRM/CIT280CRM.csproj
@@ -204,6 +204,10 @@
     <Compile Include="Migrations\201703201259074_Initial.Designer.cs">
       <DependentUpon>201703201259074_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704121225415_mig2.cs" />
+    <Compile Include="Migrations\201704121225415_mig2.Designer.cs">
+      <DependentUpon>201704121225415_mig2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\HtmlPrefixScopeExtensions.cs" />
@@ -325,6 +329,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201703201259074_Initial.resx">
       <DependentUpon>201703201259074_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704121225415_mig2.resx">
+      <DependentUpon>201704121225415_mig2.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
