--- a/CIT280CRM/CIT280CRM/CIT280CRM.csproj
+++ b/CIT280CRM/CIT280CRM/CIT280CRM.csproj
@@ -209,6 +209,10 @@
     <Compile Include="Migrations\201704121225415_mig2.Designer.cs">
       <DependentUpon>201704121225415_mig2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704121246100_newTable.cs" />
+    <Compile Include="Migrations\201704121246100_newTable.Designer.cs">
+      <DependentUpon>201704121246100_newTable.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\HtmlPrefixScopeExtensions.cs" />
@@ -220,6 +224,7 @@
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\ProductModels.cs" />
     <Compile Include="Models\SaleItemModels.cs" />
+    <Compile Include="Models\ViewModels\ProductViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -327,7 +332,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
@@ -338,6 +342,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704121225415_mig2.resx">
       <DependentUpon>201704121225415_mig2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704121246100_newTable.resx">
+      <DependentUpon>201704121246100_newTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
