--- a/CIT280CRM/CIT280CRM/Web.config
+++ b/CIT280CRM/CIT280CRM/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-CIT280CRM-20170312125223.mdf;Initial Catalog=aspnet-CIT280CRM-20170312125223;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="AzureDb" connectionString="Server=tcp:cit280crm-server.database.windows.net,1433;Initial Catalog=CIT280db;Persist Security Info=False;User ID=cit280admin;Password=cit280CRM!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
