--- a/CIT280CRM/CIT280CRM/CIT280CRM.csproj
+++ b/CIT280CRM/CIT280CRM/CIT280CRM.csproj
@@ -216,6 +216,10 @@
     <Compile Include="Migrations\201704121246100_newTable.Designer.cs">
       <DependentUpon>201704121246100_newTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704191221148_new.cs" />
+    <Compile Include="Migrations\201704191221148_new.Designer.cs">
+      <DependentUpon>201704191221148_new.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\HtmlPrefixScopeExtensions.cs" />
@@ -365,6 +369,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704121246100_newTable.resx">
       <DependentUpon>201704121246100_newTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704191221148_new.resx">
+      <DependentUpon>201704191221148_new.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
