--- a/CIT280CRM/CIT280CRM/CIT280CRM.csproj
+++ b/CIT280CRM/CIT280CRM/CIT280CRM.csproj
@@ -224,6 +224,10 @@
     <Compile Include="Migrations\201704191221148_new.Designer.cs">
       <DependentUpon>201704191221148_new.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704231705040_update423.cs" />
+    <Compile Include="Migrations\201704231705040_update423.Designer.cs">
+      <DependentUpon>201704231705040_update423.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\HtmlPrefixScopeExtensions.cs" />
@@ -377,6 +381,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704191221148_new.resx">
       <DependentUpon>201704191221148_new.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704231705040_update423.resx">
+      <DependentUpon>201704231705040_update423.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
