--- a/CIT280CRM/CIT280CRM/CIT280CRM.csproj
+++ b/CIT280CRM/CIT280CRM/CIT280CRM.csproj
@@ -228,6 +228,10 @@
     <Compile Include="Migrations\201704231705040_update423.Designer.cs">
       <DependentUpon>201704231705040_update423.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704231833129_invoicefix.cs" />
+    <Compile Include="Migrations\201704231833129_invoicefix.Designer.cs">
+      <DependentUpon>201704231833129_invoicefix.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\HtmlPrefixScopeExtensions.cs" />
@@ -384,6 +388,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704231705040_update423.resx">
       <DependentUpon>201704231705040_update423.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704231833129_invoicefix.resx">
+      <DependentUpon>201704231833129_invoicefix.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
